<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimary">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            tools:ignore="UseCompoundDrawables,UselessParent">

        <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_skin"
                android:layout_gravity="center"
                tools:ignore="ContentDescription"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/intercomponent_margin"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/h1"
                android:fontFamily="@font/cuprum_bold"
                android:text="@string/app_name"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:fontFamily="@font/cuprum_italic"
                android:text="@string/app_desc"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:fontFamily="@font/cuprum_regular"
                android:text="@string/copyright"/>

    </LinearLayout>

</LinearLayout>