<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/standard_padding"
            tools:ignore="UseCompoundDrawables,UselessParent">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/intercomponent_margin"
                android:src="@drawable/ic_credits"
                tools:ignore="ContentDescription"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/cuprum_bold"
                android:textSize="@dimen/h3"
                android:text="@string/credits_header"/>

    </LinearLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimary"/>

    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/standard_padding"
            android:stretchColumns="1">

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UselessLeaf,UselessParent">

            <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_vertical"
                    android:src="@mipmap/ic_logo_harvard_dataverse"
                    tools:ignore="ContentDescription"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/intercomponent_margin"
                    android:fontFamily="@font/cuprum_regular"
                    android:layout_gravity="center_vertical"
                    android:text="@string/credits_01"/>

        </TableRow>

    </TableLayout>

    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/standard_padding"
            android:stretchColumns="1">

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UselessLeaf,UselessParent">

            <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_vertical"
                    android:background="@android:color/black"
                    android:src="@drawable/ic_logo_flaticon"
                    tools:ignore="ContentDescription"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="@dimen/intercomponent_margin">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/cuprum_bold"
                        android:layout_gravity="center_vertical"
                        android:text="@string/credits_02"/>

                <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:stretchColumns="1">

                    <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/bullet"/>

                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/intercomponent_margin"
                                android:fontFamily="@font/cuprum_regular"
                                android:layout_gravity="center_vertical"
                                android:text="@string/credits_02a"/>

                    </TableRow>

                </TableLayout>

            </LinearLayout>

        </TableRow>

    </TableLayout>

    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/standard_padding"
            android:stretchColumns="1">

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UselessLeaf,UselessParent">

            <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_vertical"
                    android:src="@mipmap/ic_logo_kemkominfo"
                    tools:ignore="ContentDescription"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/intercomponent_margin"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/cuprum_bold"
                        android:layout_gravity="center_vertical"
                        android:text="@string/credits_03"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/cuprum_regular"
                        android:layout_gravity="center_vertical"
                        android:text="@string/credits_03a"/>

            </LinearLayout>

        </TableRow>

    </TableLayout>

    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/standard_padding"
            android:stretchColumns="1">

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UselessLeaf,UselessParent">

            <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_vertical"
                    android:src="@mipmap/ic_logo_its"
                    tools:ignore="ContentDescription"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/intercomponent_margin"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/cuprum_bold"
                        android:layout_gravity="center_vertical"
                        android:text="@string/credits_04"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/cuprum_regular"
                        android:layout_gravity="center_vertical"
                        android:text="@string/credits_04a"/>

            </LinearLayout>

        </TableRow>

    </TableLayout>

</LinearLayout>